--- a/MetanalysisNeonics/MetanalysisNeonics.tex
+++ b/MetanalysisNeonics/MetanalysisNeonics.tex
@@ -232,6 +232,9 @@ y \textasciitilde{} Concentration {[}g/kg{]} & 0.019 & 0.27 & 132.915 &
 0.820 & 0.241\tabularnewline
 y \textasciitilde{} Concentration {[}g/kg{]} + Nesting Area & 0.052 &
 0.26 & 134.968 & 2.872 & 0.086\tabularnewline
+y \textasciitilde{} Concentration {[}kg/ha{]} + Nesting Area +
+Functional Group & 0.019 & 0.36 & 164.602 & 32.507 &
+0.000\tabularnewline
 y \textasciitilde{} Concentration {[}Kg/Ha{]} & 0.165 & 0.04 & 164.902 &
 32.807 & 0.000\tabularnewline
 y \textasciitilde{} 1 & 0.000 & 0.00 & 463.583 & 331.488 &
@@ -240,6 +243,8 @@ y \textasciitilde{} Functional group & 0.106 & 0.06 & 464.017 & 331.922
 & 0.000\tabularnewline
 y \textasciitilde{} Nesting Area & 0.532 & 0.00 & 466.648 & 334.553 &
 0.000\tabularnewline
+y \textasciitilde{} Order + Functional group & 0.028 & 0.17 & 472.253 &
+340.158 & 0.000\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -247,14 +252,14 @@ y \textasciitilde{} Nesting Area & 0.532 & 0.00 & 466.648 & 334.553 &
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-16-1.pdf}
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-18-1.pdf}
 \caption{effect size of the Standardized mean difference of behavior and
 concentration (ppb)}
 \end{figure}
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-18-1.pdf}
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-20-1.pdf}
 \caption{effect size of the concentration and neonic type on the
 behavior Standardized mean difference of abundance}
 \end{figure}
@@ -272,18 +277,18 @@ model & p\_value & R\_squared & AICc & deltaAICc & Weight\tabularnewline
 model & p\_value & R\_squared & AICc & deltaAICc & Weight\tabularnewline
 \midrule
 \endhead
-y \textasciitilde{} Concentration {[}ppb{]} & 0.136 & 0.04 & 143.381 &
-0.000 & 0.509\tabularnewline
-y \textasciitilde{} Concentration + neonic type & 0.099 & 0.14 & 143.454
-& 0.073 & 0.491\tabularnewline
-y \textasciitilde{} study type & 0.110 & 0.08 & 166.687 & 23.306 &
-0.000\tabularnewline
-y \textasciitilde{} neonic type & 0.181 & 0.04 & 167.467 & 24.086 &
-0.000\tabularnewline
-y \textasciitilde{} AI type & 0.981 & 0.00 & 183.581 & 40.200 &
-0.000\tabularnewline
-y \textasciitilde{} AI type + Functional group & 0.797 & 0.00 & 190.497
-& 47.116 & 0.000\tabularnewline
+y \textasciitilde{} Concentration {[}ppb{]} & 0.107 & 0.05 & 142.911 &
+0.000 & 0.54\tabularnewline
+y \textasciitilde{} Concentration + neonic type & 0.090 & 0.15 & 143.231
+& 0.320 & 0.46\tabularnewline
+y \textasciitilde{} study type & 0.110 & 0.08 & 166.687 & 23.776 &
+0.00\tabularnewline
+y \textasciitilde{} neonic type & 0.181 & 0.04 & 167.467 & 24.556 &
+0.00\tabularnewline
+y \textasciitilde{} Treatment type & 0.460 & 0.00 & 170.758 & 27.847 &
+0.00\tabularnewline
+y \textasciitilde{} Treatment type + Functional group & 0.375 & 0.02 &
+175.035 & 32.124 & 0.00\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -291,7 +296,7 @@ y \textasciitilde{} AI type + Functional group & 0.797 & 0.00 & 190.497
 
 \begin{figure}[htbp]
 \centering
-\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-27-1.pdf}
+\includegraphics{MetanalysisNeonics_files/figure-latex/unnamed-chunk-29-1.pdf}
 \caption{effect size of the concentration and neonic type on the
 reporoduction Standardized mean difference of abundance}
 \end{figure}
