--- a/MetanalysisNeonics/MetanalysisNeonics.Rmd
+++ b/MetanalysisNeonics/MetanalysisNeonics.Rmd
@@ -23,7 +23,7 @@ output: rticles::elsevier_article
 ---
 
 ```{r, message=FALSE, warning=FALSE, echo=FALSE}
-Meta <- readRDS("Meta.rds")
+Meta <- readRDS("Meta2.rds")
 
 library(ggplot2)
 library(metafor)
@@ -113,259 +113,238 @@ As we can see in table 1 and figure 2, all estimations of the effects are negati
 
 
 ```{r, message=FALSE, warning=FALSE, echo=FALSE, fig.cap= "effect size of the Standardized mean difference for each type of estimation of performance and it's standard error"}
-All <- All[-4,]
+All <- All
 
-ggplot(All, aes(x = group, y = estimate)) + geom_point(aes(size = n)) + coord_flip() + geom_errorbar(aes(ymin=ci.lb, ymax=ci.ub),width=0.0) + geom_hline(yintercept = 0, linetype=2) + ylim(c(-10, 10)) + ylab(c("Standardized Mean Difference")) + theme_classic() + xlab(c(""))
+ggplot(All, aes(x = group, y = estimate)) + geom_point(aes(size = n)) + coord_flip() + geom_errorbar(aes(ymin=ci.lb, ymax=ci.ub),width=0.0) + geom_hline(yintercept = 0, linetype=2) + ylim(c(-15, 15)) + ylab(c("Standardized Mean Difference")) + theme_classic() + xlab(c(""))
 
 ```
 
 # Estimations using moderators:
 
-# Abundance
+### Abundance models without concentrations 
 
 
 ```{r, message=FALSE, warning=FALSE, echo=FALSE}
-
-### Abundance and functional group
-
 Abundance <- dplyr::filter(Meta, Fitness.measure == "abundance")
+
+#### Names
+Cols <- c("Order", "Functional group", "Treatment Type", "Neonic", "Nesting Area")
+n <- length(Cols)
+
+id <- unlist(
+  lapply(1:n,
+         function(i)combn(1:n,i,simplify=FALSE)
+  )
+  ,recursive=FALSE)
+
+ModelNames <- sapply(id,function(i)
+  paste("y~",paste(Cols[i],collapse="+"))
+)
+
 
 dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Abundance, vtype = "UB")
 
-res <- rma(yi, vi, data=dat1, refline = 0, method = "HE", slab = paste(dat1$Authors, dat1$Year))
+Cols <- c("factor(Order)", "factor(Functional.group)", "factor(TreatmentType)", "factor(Treatment.2)", "factor(Nesting.Area)")
+n <- length(Cols)
 
-model0 <- data.frame(model = "y ~ 1", p_value = res$QMp, R_squared = 0, AICc = res$fit.stats$ML[5])
+id <- unlist(
+  lapply(1:n,
+         function(i)combn(1:n,i,simplify=FALSE)
+  )
+  ,recursive=FALSE)
 
-nullmod <- data.frame(estimate = res$b, ci.ub = res$ci.ub, ci.lb = res$ci.lb, group = c("Null"), p = res$pval, n =nrow(Abundance))
+Formulas <- sapply(id,function(i)
+  paste("~",paste(Cols[i],collapse="+"))
+)
 
-
-
-res0 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~  factor(Functional.group) - 1, slab = paste(dat1$Authors, dat1$Year))
-
-functionalgroup <- data.frame(estimate = res0$b, ci.ub = res0$ci.ub, ci.lb = res0$ci.lb, group = c("detritivore","mixed", "omnivore", "pollinator", "predator"), p = res0$pval, n = c(length(dplyr::filter(Abundance, Functional.group == "detritivore")$Functional.group),length(dplyr::filter(Abundance, Functional.group == "mixed")$Functional.group), length(dplyr::filter(Abundance, Functional.group == "omnivore")$Functional.group), length(dplyr::filter(Abundance, Functional.group == "pollinator")$Functional.group), length(dplyr::filter(Abundance, Functional.group == "predator")$Functional.group)))
-
+resabund <- lapply(Formulas,function(i)
+  rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =as.formula(i), slab = paste(dat1$Authors, dat1$Year))
+)
 res1 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~  factor(Functional.group), slab = paste(dat1$Authors, dat1$Year))
 
-model1 <- data.frame(model = "y ~ Functional group", p_value = res1$QMp, R_squared = round(res1$R2/100,2), AICc = res1$fit.stats$ML[5])
+modelAbund <- data.frame(model = character(length(resabund)), pvalue = numeric(length(resabund)), R_squared = numeric(length(resabund)), n = numeric(length(resabund)), AICc = numeric(length(resabund)), stringsAsFactors = FALSE)
 
+for (i in 1:length(resabund)){
+  modelAbund[i,1]<- ModelNames[i]
+  modelAbund[i,2]<- resabund[[i]]$QMp
+  modelAbund[i,3]<- round(resabund[[i]]$R2/100,2)
+  modelAbund[i,4]<- NROW(dat1)
+  modelAbund[i,5]<- resabund[[i]]$fit.stats$ML[5]
+}
 ```
 
-
-
-
-```{r, message=FALSE, warning=FALSE, echo=FALSE}
-### Abundance and nesting area
-
-
-Abundance <- dplyr::filter(Meta, Fitness.measure == "abundance")
-
-dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Abundance, vtype = "UB")
-
-res <- rma(yi, vi, data=dat1, refline = 0, method = "HE", slab = paste(dat1$Authors, dat1$Year))
-
-nullmod <- data.frame(estimate = res$b, ci.ub = res$ci.ub, ci.lb = res$ci.lb, group = c("Null"), p = res$pval, n =nrow(Abundance))
-
-
-
-res0 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~  factor(Nesting.Area) - 1, slab = paste(dat1$Authors, dat1$Year))
-
-NestingArea <- data.frame(estimate = res0$b, ci.ub = res0$ci.ub, ci.lb = res0$ci.lb, group = c("aboveground","both", "ground"), p = res0$pval, n = c(length(dplyr::filter(Abundance, Functional.group == "aboveground")$Nesting.Area),length(dplyr::filter(Abundance, Functional.group == "both")$Nesting.Area), length(dplyr::filter(Abundance, Functional.group == "ground")$Nesting.Area)))
-
-res4 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~  factor(Nesting.Area), slab = paste(dat1$Authors, dat1$Year))
-
-model4 <- data.frame(model = "y ~ Nesting Area", p_value = res4$QMp, R_squared = round(res4$R2/100,2), AICc = res4$fit.stats$ML[5])
-
-```
-
-
-
-
-```{r, message=FALSE, warning=FALSE, echo=FALSE}
-### Abundance and concentration (Kg/Ha) for Powder/granular treatment
-
-Abundance <- dplyr::filter(Meta, Fitness.measure == "abundance")
-
-Abundance_kg_ha <- dplyr::filter(Abundance, Application.Units == "kg/ha")
-Abundance_kg_ha <- dplyr::filter(Abundance_kg_ha, TreatmentType == "powder/granular")
-Abundance_kg_ha_t2 <- dplyr::filter(Abundance_kg_ha, !is.na(AI.Rate_T2))
-Abundance_kg_ha_t2$AI.Rate_T1 <- Abundance_kg_ha_t2$AI.Rate_T2
-Abundance_kg_ha_t2$T1_Mean <- Abundance_kg_ha_t2$T2_Mean
-Abundance_kg_ha_t2$T1_SE <- Abundance_kg_ha_t2$T2_SE
-Abundance_kg_ha_t2$Study.T1..n. <- Abundance_kg_ha_t2$Study.T2..n.
-
-Abundance_kg_ha <- rbind(Abundance_kg_ha, Abundance_kg_ha_t2)
-
-dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Abundance_kg_ha, vtype = "UB")
-
-res7 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~  AI.Rate_T1, slab = paste(dat1$Authors, dat1$Year))
-
-preds <- predict(res7, newmods = cbind(seq(from = min(dat1$AI.Rate_T1), to = max(dat1$AI.Rate_T1), length.out =  20)), addx = TRUE)
-preds <- data.frame(pred = preds$pred, ci.lb = preds$ci.lb, ci.ub = preds$ci.ub, X.AI.Rate_T1 = preds$X[,2])
-
-model7 <- data.frame(model = "y ~ Concentration [Kg/Ha]", p_value = res7$QMp, R_squared = round(res7$R2/100,2), AICc = res7$fit.stats$ML[5])
-```
-
-
-```{r, message=FALSE, warning=FALSE, echo=FALSE}
-### Abundance and concentration (g/Kg) for seed treatment
-
-Abundance <- dplyr::filter(Meta, Fitness.measure == "abundance")
-
-Abundance_g_kg <- dplyr::filter(Abundance, Application.Units == "g/kg")
-
-
-dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Abundance_g_kg, vtype = "UB")
-
-res8 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~  AI.Rate_T1, slab = paste(dat1$Authors, dat1$Year))
-
-preds <- predict(res8, newmods = cbind(seq(from = min(dat1$AI.Rate_T1), to = max(dat1$AI.Rate_T1), length.out =  20)), addx = TRUE)
-preds <- data.frame(pred = preds$pred, ci.lb = preds$ci.lb, ci.ub = preds$ci.ub, X.AI.Rate_T1 = preds$X[,2])
-
-model8 <- data.frame(model = "y ~ Concentration [g/kg]", p_value = res8$QMp, R_squared = round(res8$R2/100,2), AICc = res8$fit.stats$ML[5])
-```
-
-
-```{r, message=FALSE, warning=FALSE, echo=FALSE}
-### Abundance concentration [g/Kg] and functional group
-
-Abundance <- dplyr::filter(Meta, Fitness.measure == "abundance")
-Abundance <- dplyr::filter(Meta, Fitness.measure == "abundance")
-
-Abundance_g_kg <- dplyr::filter(Abundance, Application.Units == "g/kg")
-
-
-dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Abundance_g_kg, vtype = "UB")
-
-res9 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~  AI.Rate_T1+ factor(Functional.group), slab = paste(dat1$Authors, dat1$Year))
-
-library(caret)
-
-newmods = expand.grid(AI.Rate_T1 = seq(from = min(dat1$AI.Rate_T1), to = max(dat1$AI.Rate_T1), length.out =  20), Functional.group = c("mixed", "predator"))
-
-dum <- dummyVars(~ Functional.group, data = newmods)
-
-NM <- cbind(newmods[,1],predict(dum, newmods))
-
-preds <- predict(res9, newmods = NM[,1:2], addx = TRUE)
-
-preds <- data.frame(pred = preds$pred, ci.lb = preds$ci.lb, ci.ub = preds$ci.ub, X.AI.Rate_T1 = preds$X[,2], Functional.group = newmods$Functional.group)
-
-model9 <- data.frame(model = "y ~ Concentration [g/kg] + Functional group", p_value = res9$QMp, R_squared = round(res9$R2/100,2), AICc = res9$fit.stats$ML[5])
-
-```
-
-```{r, message=FALSE, warning=FALSE, echo=FALSE, cache=FALSE, fig.cap= "effect size of the Standardized mean difference of Abundance and concentration [g/Kg]"}
-
-ggplot(dat1, aes(x = AI.Rate_T1, y = yi))  + geom_ribbon(data = preds, aes(x = X.AI.Rate_T1, y = pred, ymin = ci.lb, ymax = ci.ub, fill = Functional.group), alpha = 0.5) + theme_classic() + geom_line(data = preds, aes(x = X.AI.Rate_T1, y = pred, lty = Functional.group)) + geom_point() + xlab("Concentration [g/kg]") + ylab("Standardized mean difference") + geom_hline(yintercept = 0, lty= 2) + scale_fill_grey("Functional Group") + scale_linetype(name = "Functional Group")
-
-```
-
-
-```{r, message=FALSE, warning=FALSE, echo=FALSE}
-### Abundance concentration [g/Kg] and nesting area
-
-Abundance <- dplyr::filter(Meta, Fitness.measure == "abundance")
-Abundance <- dplyr::filter(Meta, Fitness.measure == "abundance")
-
-Abundance_g_kg <- dplyr::filter(Abundance, Application.Units == "g/kg")
-
-
-dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Abundance_g_kg, vtype = "UB")
-
-res10 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~  AI.Rate_T1+ factor(Nesting.Area), slab = paste(dat1$Authors, dat1$Year))
-
-library(caret)
-
-newmods = expand.grid(T1_ppb = seq(from = min(dat1$AI.Rate_T1), to = max(dat1$AI.Rate_T1), length.out =  20), Nesting.Area = c("aboveground", "both"))
-
-dum <- dummyVars(~ Nesting.Area, data = newmods)
-
-NM <- cbind(newmods[,1],predict(dum, newmods))
-
-preds <- predict(res10, newmods = NM[,1:2], addx = TRUE)
-
-preds <- data.frame(pred = preds$pred, ci.lb = preds$ci.lb, ci.ub = preds$ci.ub, X.AI.Rate_T1 = preds$X[,2])
-
-model10 <- data.frame(model = "y ~ Concentration [g/kg] + Nesting Area", p_value = res10$QMp, R_squared = round(res10$R2/100,2), AICc = res10$fit.stats$ML[5])
-
-```
-
-
-```{r, message=FALSE, warning=FALSE, echo=FALSE}
-### Abundance concentration [g/Kg] and nesting area
-
-Abundance <- dplyr::filter(Meta, Fitness.measure == "abundance")
-Abundance <- dplyr::filter(Meta, Fitness.measure == "abundance")
-
-Abundance_g_kg <- dplyr::filter(Abundance, Application.Units == "g/kg")
-
-
-dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Abundance_g_kg, vtype = "UB")
-
-res11 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~  AI.Rate_T1+ factor(Nesting.Area) + factor(Functional.group), slab = paste(dat1$Authors, dat1$Year))
-
-model11 <- data.frame(model = "y ~ Concentration [g/kg] + Nesting Area + Functional Group", p_value = res11$QMp, R_squared = round(res11$R2/100,2), AICc = res11$fit.stats$ML[5])
-
-```
-
-
-```{r, message=FALSE, warning=FALSE, echo=FALSE}
-### Abundance concentration [kg/ha] and nesting area
-
-Abundance_kg_ha <- dplyr::filter(Abundance, Application.Units == "kg/ha")
-Abundance_kg_ha <- dplyr::filter(Abundance_kg_ha, TreatmentType == "powder/granular")
-Abundance_kg_ha_t2 <- dplyr::filter(Abundance_kg_ha, !is.na(AI.Rate_T2))
-Abundance_kg_ha_t2$AI.Rate_T1 <- Abundance_kg_ha_t2$AI.Rate_T2
-Abundance_kg_ha_t2$T1_Mean <- Abundance_kg_ha_t2$T2_Mean
-Abundance_kg_ha_t2$T1_SE <- Abundance_kg_ha_t2$T2_SE
-Abundance_kg_ha_t2$Study.T1..n. <- Abundance_kg_ha_t2$Study.T2..n.
-
-Abundance_kg_ha <- rbind(Abundance_kg_ha, Abundance_kg_ha_t2)
-
-
-dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Abundance_kg_ha, vtype = "UB")
-
-res12 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~  AI.Rate_T1+ factor(Nesting.Area) + factor(Functional.group), slab = paste(dat1$Authors, dat1$Year))
-
-model12 <- data.frame(model = "y ~ Concentration [kg/ha] + Nesting Area + Functional Group", p_value = res12$QMp, R_squared = round(res12$R2/100,2), AICc = res12$fit.stats$ML[5])
-
-```
-
-```{r, message=FALSE, warning=FALSE, echo=FALSE}
-### Abundance and nesting area
-
-
-Abundance <- dplyr::filter(Meta, Fitness.measure == "abundance")
-
-dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Abundance, vtype = "UB")
-
-res13 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~  factor(Order) + factor(Functional.group), slab = paste(dat1$Authors, dat1$Year))
-
-model13 <- data.frame(model = "y ~ Order + Functional group", p_value = res13$QMp, R_squared = round(res13$R2/100,2), AICc = res13$fit.stats$ML[5])
-
-```
-
-### Comparison of models
+### Comparison of models without concentrations
 
 ```{r, echo= FALSE}
-All <- rbind(model0, model1, model4, model7, model8, model9, model10, model11, model12, model13)
+modelAbund <- dplyr::arrange(modelAbund, AICc)
 
-All <- dplyr::arrange(All, AICc)
+modelAbund$deltaAICc <- (modelAbund$AICc - min(modelAbund$AICc))
 
-All$deltaAICc <- (All$AICc - min(All$AICc))
+SUMDELTA <- sum(exp(-0.5*modelAbund$deltaAICc))
 
-SUMDELTA <- sum(exp(-0.5*All$deltaAICc))
+modelAbund$Weight <- exp(-0.5*modelAbund$deltaAICc)/SUMDELTA
 
-All$Weight <- exp(-0.5*All$deltaAICc)/SUMDELTA
+modelAbund <- dplyr::filter(modelAbund, deltaAICc < 5)
 
-knitr::kable(All, digits = 3, row.names = FALSE, caption = "Comparison of models taking into account p value, Pseudo R squared and AICc")
+knitr::kable(modelAbund, digits = 3, row.names = FALSE, caption = "Comparison of models taking into account p value, Pseudo R squared and AICc")
+```
+
+### Abundance and concentration (Kg/Ha) for Powder/granular treatment models 
+
+
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
+Abundance <- dplyr::filter(Meta, Fitness.measure == "abundance")
+
+Abundance_kg_ha <- dplyr::filter(Abundance, Application.Units == "kg/ha")
+Abundance_kg_ha <- dplyr::filter(Abundance_kg_ha, TreatmentType == "powder/granular")
+
+#### Names
+Cols <- c("Order", "Functional group", "Nesting Area", "Concentration [Kg/Ha]")
+n <- length(Cols)
+
+id <- unlist(
+  lapply(1:n,
+         function(i)combn(1:n,i,simplify=FALSE)
+  )
+  ,recursive=FALSE)
+
+ModelNames <- sapply(id,function(i)
+  paste("y~",paste(Cols[i],collapse="+"))
+)
+
+
+dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Abundance_kg_ha, vtype = "UB")
+
+Cols <- c("factor(Order)", "factor(Functional.group)", "factor(Nesting.Area)", "AI.Rate_T1")
+n <- length(Cols)
+
+id <- unlist(
+  lapply(1:n,
+         function(i)combn(1:n,i,simplify=FALSE)
+  )
+  ,recursive=FALSE)
+
+Formulas <- sapply(id,function(i)
+  paste("~",paste(Cols[i],collapse="+"))
+)
+
+resabund <- lapply(Formulas,function(i)
+  rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =as.formula(i), slab = paste(dat1$Authors, dat1$Year))
+)
+res1 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~  factor(Functional.group), slab = paste(dat1$Authors, dat1$Year))
+
+modelAbund <- data.frame(model = character(length(resabund)), pvalue = numeric(length(resabund)), R_squared = numeric(length(resabund)), n = numeric(length(resabund)), AICc = numeric(length(resabund)), stringsAsFactors = FALSE)
+
+for (i in 1:length(resabund)){
+  modelAbund[i,1]<- ModelNames[i]
+  modelAbund[i,2]<- resabund[[i]]$QMp
+  modelAbund[i,3]<- round(resabund[[i]]$R2/100,2)
+  modelAbund[i,4]<- NROW(dat1)
+  modelAbund[i,5]<- resabund[[i]]$fit.stats$ML[5]
+}
+```
+
+```{r, message=FALSE, warning=FALSE, echo=FALSE, cache=FALSE, fig.cap= "effect size of the Standardized mean difference of behavior and concentration (Kg/Ha) for powder/granular aplications"}
+
+#ggplot(dat1, aes(x = AI.Rate_T1, y = yi))  + geom_ribbon(data = preds, aes(x = X.AI.Rate_T1, y = pred, ymin = ci.lb, ymax = ci.ub), fill = "grey", alpha = 0.5) + theme_classic() + geom_line(data = preds, aes(x = X.AI.Rate_T1, y = pred)) + geom_point() + xlab("Concentration (Kg/Ha)") + ylab("Standardized mean difference") + geom_hline(yintercept = 0, lty= 2) + scale_size("Number of studies") + scale_x_continuous(labels = scales::comma)
+
+```
+
+
+### Comparison of models with concentrations [Kg/Ha]
+
+```{r, echo= FALSE}
+modelAbund <- dplyr::arrange(modelAbund, AICc)
+
+modelAbund$deltaAICc <- (modelAbund$AICc - min(modelAbund$AICc))
+
+SUMDELTA <- sum(exp(-0.5*modelAbund$deltaAICc))
+
+modelAbund$Weight <- exp(-0.5*modelAbund$deltaAICc)/SUMDELTA
+
+modelAbund <- dplyr::filter(modelAbund, deltaAICc < 5)
+
+knitr::kable(modelAbund, digits = 3, row.names = FALSE, caption = "Comparison of models taking into account p value, Pseudo R squared and AICc")
+```
+
+### Abundance and concentration (g/Kg) models with seed treatment
+
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
+
+Abundance <- dplyr::filter(Meta, Fitness.measure == "abundance")
+
+Abundance_g_kg <- dplyr::filter(Abundance, Application.Units == "g/kg")
+
+
+dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Abundance_g_kg, vtype = "UB")
+
+Cols <- c("Order", "Functional group", "Nesting Area", "Concentration [g/Kg]")
+n <- length(Cols)
+
+id <- unlist(
+  lapply(1:n,
+         function(i)combn(1:n,i,simplify=FALSE)
+  )
+  ,recursive=FALSE)
+
+ModelNames <- sapply(id,function(i)
+  paste("y~",paste(Cols[i],collapse="+"))
+)
+
+
+Cols <- c("factor(Order)", "factor(Functional.group)", "factor(Nesting.Area)", "AI.Rate_T1")
+n <- length(Cols)
+
+id <- unlist(
+  lapply(1:n,
+         function(i)combn(1:n,i,simplify=FALSE)
+  )
+  ,recursive=FALSE)
+
+Formulas <- sapply(id,function(i)
+  paste("~",paste(Cols[i],collapse="+"))
+)
+
+resabund <- lapply(Formulas,function(i)
+  rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =as.formula(i), slab = paste(dat1$Authors, dat1$Year))
+)
+res1 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~  factor(Functional.group), slab = paste(dat1$Authors, dat1$Year))
+
+modelAbund <- data.frame(model = character(length(resabund)), pvalue = numeric(length(resabund)), R_squared = numeric(length(resabund)), n = numeric(length(resabund)), AICc = numeric(length(resabund)), stringsAsFactors = FALSE)
+
+for (i in 1:length(resabund)){
+  modelAbund[i,1]<- ModelNames[i]
+  modelAbund[i,2]<- resabund[[i]]$QMp
+  modelAbund[i,3]<- round(resabund[[i]]$R2/100,2)
+  modelAbund[i,4]<- NROW(dat1)
+  modelAbund[i,5]<- resabund[[i]]$fit.stats$ML[5]
+}
+
+```
+
+
+### Comparison of models [g/Kg]
+
+```{r, echo= FALSE}
+modelAbund <- dplyr::arrange(modelAbund, AICc)
+
+modelAbund$deltaAICc <- (modelAbund$AICc - min(modelAbund$AICc))
+
+SUMDELTA <- sum(exp(-0.5*modelAbund$deltaAICc))
+
+modelAbund$Weight <- exp(-0.5*modelAbund$deltaAICc)/SUMDELTA
+
+modelAbund <- dplyr::filter(modelAbund, deltaAICc < 5)
+
+
+knitr::kable(modelAbund, digits = 3, row.names = FALSE, caption = "Comparison of models taking into account p value, Pseudo R squared and AICc")
 ```
 
 
 
 # Behaviour
 
-
+###Behaviour without concentration
 
 ```{r, message=FALSE, warning=FALSE, echo=FALSE}
 ### Behaviour and AI type
@@ -374,153 +353,73 @@ Behavior <- dplyr::filter(Meta, Fitness.measure == "behavior")
 
 dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Behavior, vtype = "UB")
 
-res <- rma(yi, vi, data=dat1, refline = 0, method = "HE", slab = paste(dat1$Authors, dat1$Year))
-
-nullmod <- data.frame(estimate = res$b, ci.ub = res$ci.ub, ci.lb = res$ci.lb, group = c("Null"), p = res$pval, n =nrow(Behavior))
+Cols <- c("Order", "Functional group", "Nesting Area", "Neonic", "Treatment Type", "Study Type")
 
 
+n <- length(Cols)
 
-res0 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~  factor(TreatmentType) - 1, slab = paste(dat1$Authors, dat1$Year))
+id <- unlist(
+  lapply(1:n,
+         function(i)combn(1:n,i,simplify=FALSE)
+  )
+  ,recursive=FALSE)
 
-AItype <- data.frame(estimate = res0$b, ci.ub = res0$ci.ub, ci.lb = res0$ci.lb, group = c("commercial","granular", "not specified", "seed treatment", "solution", "technical grade"), p = res0$pval, n = c(NROW(dplyr::filter(Behavior, TreatmentType == "commercial")), NROW(dplyr::filter(Behavior, TreatmentType == "granular")), NROW(dplyr::filter(Behavior, TreatmentType == "not specified")), NROW(dplyr::filter(Behavior, TreatmentType == "seed treatment")), NROW(dplyr::filter(Behavior, TreatmentType == "solution")), NROW(dplyr::filter(Behavior, TreatmentType == "technical grade"))))
-
-All <- rbind(nullmod, AItype)
-
-res1 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~  factor(TreatmentType), slab = paste(dat1$Authors, dat1$Year))
-
-model1 <- data.frame(model = "y ~ Treatment type", p_value = res1$QMp, R_squared = round(res1$R2/100,2), AICc = res1$fit.stats$ML[5])
-
-```
-
-
-```{r, message=FALSE, warning=FALSE, echo=FALSE}
-Behavior <- dplyr::filter(Meta, Fitness.measure == "behavior")
-Behavior_ppb <- Behavior[!is.na(Behavior$T1_ppb),]
-
-Behavior_ppb_t2 <- dplyr::filter(Behavior_ppb, !is.na(T2_ppb))
-Behavior_ppb_t2$T1_ppb <- Behavior_ppb_t2$T2_ppb
-Behavior_ppb_t2$T1_Mean <- Behavior_ppb_t2$T2_Mean
-Behavior_ppb_t2$T1_SE <- Behavior_ppb_t2$T2_SE
-Behavior_ppb_t2$Study.T1..n. <- Behavior_ppb_t2$Study.T2..n.
-
-Behavior_ppb <- rbind(Behavior_ppb, Behavior_ppb_t2)
-
-dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Behavior_ppb, vtype = "UB")
-
-res2 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~  T1_ppb, slab = paste(dat1$Authors, dat1$Year))
-
-#res2 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~  T1_ppb +  factor(Functional.group), slab = paste(dat1$Authors, dat1$Year))
-preds <- predict(res2, newmods = cbind(seq(from = min(dat1$T1_ppb), to = max(dat1$T1_ppb), length.out =  20)), addx = TRUE)
-preds <- data.frame(pred = preds$pred, ci.lb = preds$ci.lb, ci.ub = preds$ci.ub, X.T1_ppb = preds$X[,2])
-
-model2 <- data.frame(model = "y ~ Concentration [ppb]", p_value = res2$QMp, R_squared = round(res2$R2/100,2), AICc = res2$fit.stats$ML[5])
-```
+ModelNames <- sapply(id,function(i)
+  paste("y~",paste(Cols[i],collapse="+"))
+)
 
 
+Cols <- c("factor(Order)", "factor(Functional.group)", "factor(Nesting.Area)", "factor(Treatment.2)", "factor(TreatmentType)", "factor(Study.Type)")
+n <- length(Cols)
 
-```{r, message=FALSE, warning=FALSE, echo=FALSE, cache=FALSE, fig.cap= "effect size of the Standardized mean difference of behavior and concentration (ppb)"}
+id <- unlist(
+  lapply(1:n,
+         function(i)combn(1:n,i,simplify=FALSE)
+  )
+  ,recursive=FALSE)
 
-ggplot(dat1, aes(x = T1_ppb, y = yi))  + geom_ribbon(data = preds, aes(x = X.T1_ppb, y = pred, ymin = ci.lb, ymax = ci.ub), fill = "grey", alpha = 0.5) + theme_classic() + geom_line(data = preds, aes(x = X.T1_ppb, y = pred)) + geom_point(aes(size = Study.T1..n.)) + xlab("Concentration (ppb)") + ylab("Standardized mean difference") + geom_hline(yintercept = 0, lty= 2) + scale_size("Number of studies") + scale_x_continuous(labels = scales::comma)
+Formulas <- sapply(id,function(i)
+  paste("~",paste(Cols[i],collapse="+"))
+)
+
+resbehav <- lapply(Formulas,function(i)
+  rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =as.formula(i), slab = paste(dat1$Authors, dat1$Year))
+)
+
+
+modelBehav <- data.frame(model = character(length(resbehav)), pvalue = numeric(length(resbehav)), R_squared = numeric(length(resbehav)), n = numeric(length(resbehav)), AICc = numeric(length(resbehav)), stringsAsFactors = FALSE)
+
+for (i in 1:length(resbehav)){
+  modelBehav[i,1]<- ModelNames[i]
+  modelBehav[i,2]<- resbehav[[i]]$QMp
+  modelBehav[i,3]<- round(resbehav[[i]]$R2/100,2)
+  modelBehav[i,4]<- NROW(dat1)
+  modelBehav[i,5]<- resbehav[[i]]$fit.stats$ML[5]
+}
 
 ```
 
 
-```{r, message=FALSE, warning=FALSE, echo=FALSE}
-### Behavior, concentration and neonic type
-
-Behavior <- dplyr::filter(Meta, Fitness.measure == "behavior")
-Behavior_ppb <- Behavior[!is.na(Behavior$T1_ppb),]
-
-Behavior_ppb_t2 <- dplyr::filter(Behavior_ppb, !is.na(T2_ppb))
-Behavior_ppb_t2$T1_ppb <- Behavior_ppb_t2$T2_ppb
-Behavior_ppb_t2$T1_Mean <- Behavior_ppb_t2$T2_Mean
-Behavior_ppb_t2$T1_SE <- Behavior_ppb_t2$T2_SE
-Behavior_ppb_t2$Study.T1..n. <- Behavior_ppb_t2$Study.T2..n.
-
-Behavior_ppb <- rbind(Behavior_ppb, Behavior_ppb_t2)
-
-dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Behavior_ppb, vtype = "UB")
-
-
-res3 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~  T1_ppb + factor(Treatment.2), slab = paste(dat1$Authors, dat1$Year))
-
-library(caret)
-
-newmods = expand.grid(T1_ppb = seq(from = min(dat1$T1_ppb), to = max(dat1$T1_ppb), length.out =  20), Treatment.2 = c("IMI", "THX"))
-
-dum <- dummyVars(~ Treatment.2, data = newmods)
-
-NM <- cbind(newmods[,1],predict(dum, newmods))
-
-preds <- predict(res3, newmods = NM[,1:2])
-
-preds <- data.frame(pred = preds$pred, ci.lb = preds$ci.lb, ci.ub = preds$ci.ub, T1_ppb = newmods$T1_ppb, Treatment.2 = newmods$Treatment.2)
-
-model3 <- data.frame(model = "y ~ Concentration + neonic type", p_value = res3$QMp, R_squared = round(res3$R2/100,2), AICc = res3$fit.stats$ML[5])
-```
-
-
-```{r, message=FALSE, warning=FALSE, echo=FALSE, cache=FALSE, fig.cap= "effect size of the concentration and neonic type on the behavior Standardized mean difference of abundance"}
-
-ggplot(preds, aes(x = T1_ppb, y = pred))  + geom_ribbon(alpha = 0.5,aes(ymin = ci.lb, ymax = ci.ub, fill = Treatment.2)) + theme_classic() + geom_line(aes(lty = Treatment.2))+ xlab("Concentration (ppb)") + ylab("Standardized mean difference") + geom_hline(yintercept = 0, lty= 2) + scale_fill_grey(name = "Neonic Type") + geom_point(alpha = 0.8, data= dat1, aes(x = T1_ppb, y = yi, size = Study.T1..n., color = Treatment.2)) + scale_color_grey(name = "Neonic Type") + scale_linetype(name = "Neonic Type") + scale_size(name = "number of studies") + scale_x_continuous(labels = scales::comma)
-```
-
-```{r, message=FALSE, warning=FALSE, echo=FALSE}
-### Behaviorand neonic type
-
-Behavior <- dplyr::filter(Meta, Fitness.measure == "behavior")
-
-dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Behavior, vtype = "UB")
-
-
-res4 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~ factor(Treatment.2), slab = paste(dat1$Authors, dat1$Year))
-
-model4 <- data.frame(model = "y ~ neonic type", p_value = res4$QMp, R_squared = round(res4$R2/100,2), AICc = res4$fit.stats$ML[5])
-```
-
-```{r, message=FALSE, warning=FALSE, echo=FALSE}
-### Behaviorand study type
-
-Behavior <- dplyr::filter(Meta, Fitness.measure == "behavior")
-
-dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Behavior, vtype = "UB")
-
-
-res5 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~ factor(Study.Type), slab = paste(dat1$Authors, dat1$Year))
-
-model5 <- data.frame(model = "y ~ study type", p_value = res5$QMp, R_squared = round(res5$R2/100,2), AICc = res5$fit.stats$ML[5])
-```
-
-```{r, message=FALSE, warning=FALSE, echo=FALSE}
-### Behaviorand Ai type and functional group
-
-Behavior <- dplyr::filter(Meta, Fitness.measure == "behavior")
-
-dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Behavior, vtype = "UB")
-
-
-res6 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~ factor(Functional.group) + factor(TreatmentType), slab = paste(dat1$Authors, dat1$Year))
-
-model6 <- data.frame(model = "y ~ Treatment type + Functional group", p_value = res6$QMp, R_squared = round(res6$R2/100,2), AICc = res6$fit.stats$ML[5])
-```
-
-### Comparison of models
+###Model Comparison behaviour without concentration
 
 ```{r, echo= FALSE}
-All <- rbind(model1, model2, model3, model4, model5, model6)
+modelBehav <- dplyr::arrange(modelBehav, AICc)
 
-All <- dplyr::arrange(All, AICc)
+modelBehav$deltaAICc <- (modelBehav$AICc - min(modelBehav$AICc))
 
-All$deltaAICc <- (All$AICc - min(All$AICc))
+SUMDELTA <- sum(exp(-0.5*modelBehav$deltaAICc))
 
-SUMDELTA <- sum(exp(-0.5*All$deltaAICc))
+modelBehav$Weight <- exp(-0.5*modelBehav$deltaAICc)/SUMDELTA
 
-All$Weight <- exp(-0.5*All$deltaAICc)/SUMDELTA
+modelBehav <- dplyr::filter(modelBehav, deltaAICc < 5)
 
-knitr::kable(All, digits = 3, row.names = FALSE, caption = "Comparison of models taking into account p value, Pseudo R squared and AICc")
+knitr::kable(modelBehav, digits = 3, row.names = FALSE, caption = "Comparison of models taking into account p value, Pseudo R squared and AICc")
 ```
 
+
 #Reproduction
+
+###Reproduction without concentration
 
 ```{r, message=FALSE, warning=FALSE, echo=FALSE}
 ### Reproduction, functional group and Order
@@ -530,98 +429,142 @@ Reproduction <- dplyr::filter(Meta, Fitness.measure == "reproduction")
 dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Reproduction, vtype = "UB")
 
 
-res1 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~ factor(Functional.group) + factor(Order), slab = paste(dat1$Authors, dat1$Year))
+Cols <- c("Order", "Functional group", "Nesting Area", "Neonic", "Treatment Type", "Study Type")
 
-model1 <- data.frame(model = "y ~ Order + Functional group", p_value = res1$QMp, R_squared = round(res1$R2/100,2), AICc = res1$fit.stats$ML[5])
+
+n <- length(Cols)
+
+id <- unlist(
+  lapply(1:n,
+         function(i)combn(1:n,i,simplify=FALSE)
+  )
+  ,recursive=FALSE)
+
+ModelNames <- sapply(id,function(i)
+  paste("y~",paste(Cols[i],collapse="+"))
+)
+
+
+Cols <- c("factor(Order)", "factor(Functional.group)", "factor(Nesting.Area)", "factor(Treatment.2)", "factor(TreatmentType)", "factor(Study.Type)")
+n <- length(Cols)
+
+id <- unlist(
+  lapply(1:n,
+         function(i)combn(1:n,i,simplify=FALSE)
+  )
+  ,recursive=FALSE)
+
+Formulas <- sapply(id,function(i)
+  paste("~",paste(Cols[i],collapse="+"))
+)
+
+resrepro <- lapply(Formulas,function(i)
+  rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =as.formula(i), slab = paste(dat1$Authors, dat1$Year))
+)
+
+
+modelRepro <- data.frame(model = character(length(resrepro)), pvalue = numeric(length(resrepro)), R_squared = numeric(length(resrepro)), n = numeric(length(resrepro)), AICc = numeric(length(resrepro)), stringsAsFactors = FALSE)
+
+for (i in 1:length(resrepro)){
+  modelRepro[i,1]<- ModelNames[i]
+  modelRepro[i,2]<- resrepro[[i]]$QMp
+  modelRepro[i,3]<- round(resrepro[[i]]$R2/100,2)
+  modelRepro[i,4]<- NROW(dat1)
+  modelRepro[i,5]<- resrepro[[i]]$fit.stats$ML[5]
+}
+
 ```
 
-```{r, message=FALSE, warning=FALSE, echo=FALSE}
-### Reproduction, Nesting area
 
-Reproduction <- dplyr::filter(Meta, Fitness.measure == "reproduction")
+###Model Comparison reproduction without concentration
 
-dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Reproduction, vtype = "UB")
+```{r, echo= FALSE}
+modelRepro <- dplyr::arrange(modelRepro, AICc)
 
+modelRepro$deltaAICc <- (modelRepro$AICc - min(modelRepro$AICc))
 
-res2 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~ factor(Nesting.Area), slab = paste(dat1$Authors, dat1$Year))
+SUMDELTA <- sum(exp(-0.5*modelRepro$deltaAICc))
 
+modelRepro$Weight <- exp(-0.5*modelRepro$deltaAICc)/SUMDELTA
 
-model2 <- data.frame(model = "y ~ Order + Nesting Area", p_value = res2$QMp, R_squared = round(res2$R2/100,2), AICc = res2$fit.stats$ML[5])
+modelRepro <- dplyr::filter(modelRepro, deltaAICc < 5)
+
+knitr::kable(modelRepro, digits = 3, row.names = FALSE, caption = "Comparison of models taking into account p value, Pseudo R squared and AICc")
 ```
+
+###Reproduction and concentration [ppb]
 
 ```{r, message=FALSE, warning=FALSE, echo=FALSE}
 #Reproduction and ppb
 Reproduction <- dplyr::filter(Meta, Fitness.measure == "reproduction")
 Reproduction_ppb <- Reproduction[!is.na(Reproduction$T1_ppb),]
 
-Reproduction_ppb_t2 <- dplyr::filter(Reproduction_ppb, !is.na(T2_ppb))
-Reproduction_ppb_t2$T1_ppb <- Reproduction_ppb_t2$T2_ppb
-Reproduction_ppb_t2$T1_Mean <- Reproduction_ppb_t2$T2_Mean
-Reproduction_ppb_t2$T1_SE <- Reproduction_ppb_t2$T2_SE
-Reproduction_ppb_t2$Study.T1..n. <- Reproduction_ppb_t2$Study.T2..n.
-
-Reproduction_ppb <- rbind(Reproduction_ppb, Reproduction_ppb_t2)
-
 dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Reproduction_ppb, vtype = "UB")
 
-res3 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~  T1_ppb, slab = paste(dat1$Authors, dat1$Year))
+
+Cols <- c("Order", "Functional group", "Nesting Area", "Neonic", "Treatment Type", "Study Type", "Concentration [ppb]")
 
 
-model3 <- data.frame(model = "y ~ Concentration [ppb]", p_value = res3$QMp, R_squared = round(res3$R2/100,2), AICc = res3$fit.stats$ML[5])
+n <- length(Cols)
+
+id <- unlist(
+  lapply(1:n,
+         function(i)combn(1:n,i,simplify=FALSE)
+  )
+  ,recursive=FALSE)
+
+ModelNames <- sapply(id,function(i)
+  paste("y~",paste(Cols[i],collapse="+"))
+)
+
+
+Cols <- c("factor(Order)", "factor(Functional.group)", "factor(Nesting.Area)", "factor(Treatment.2)", "factor(TreatmentType)", "factor(Study.Type)", "T1_ppb")
+n <- length(Cols)
+
+id <- unlist(
+  lapply(1:n,
+         function(i)combn(1:n,i,simplify=FALSE)
+  )
+  ,recursive=FALSE)
+
+Formulas <- sapply(id,function(i)
+  paste("~",paste(Cols[i],collapse="+"))
+)
+
+resrepro <- lapply(Formulas,function(i)
+  rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =as.formula(i), slab = paste(dat1$Authors, dat1$Year))
+)
+
+
+modelRepro <- data.frame(model = character(length(resrepro)), pvalue = numeric(length(resrepro)), R_squared = numeric(length(resrepro)), n = numeric(length(resrepro)), AICc = numeric(length(resrepro)), stringsAsFactors = FALSE)
+
+for (i in 1:length(resrepro)){
+  modelRepro[i,1]<- ModelNames[i]
+  modelRepro[i,2]<- resrepro[[i]]$QMp
+  modelRepro[i,3]<- round(resrepro[[i]]$R2/100,2)
+  modelRepro[i,4]<- NROW(dat1)
+  modelRepro[i,5]<- resrepro[[i]]$fit.stats$ML[5]
+}
+
 ```
 
-```{r, message=FALSE, warning=FALSE, echo=FALSE}
-#Reproduction, ppb and Neonic type
-Reproduction <- dplyr::filter(Meta, Fitness.measure == "reproduction")
-Reproduction_ppb <- Reproduction[!is.na(Reproduction$T1_ppb),]
 
-Reproduction_ppb_t2 <- dplyr::filter(Reproduction_ppb, !is.na(T2_ppb))
-Reproduction_ppb_t2$T1_ppb <- Reproduction_ppb_t2$T2_ppb
-Reproduction_ppb_t2$T1_Mean <- Reproduction_ppb_t2$T2_Mean
-Reproduction_ppb_t2$T1_SE <- Reproduction_ppb_t2$T2_SE
-Reproduction_ppb_t2$Study.T1..n. <- Reproduction_ppb_t2$Study.T2..n.
-
-Reproduction_ppb <- rbind(Reproduction_ppb, Reproduction_ppb_t2)
-
-dat1 <- escalc(measure="SMDH", m2i=Con_Mean, sd2i=Con_SE, n2i=Study.control..n., m1i=T1_Mean, sd1i=T1_SE, n1i=Study.T1..n., data=Reproduction_ppb, vtype = "UB")
-
-res4 <- rma(yi, vi, data=dat1, refline = 0, method = "HE", mods =~  T1_ppb + Treatment.2, slab = paste(dat1$Authors, dat1$Year))
-
-
-library(caret)
-
-newmods = expand.grid(T1_ppb = seq(from = min(dat1$T1_ppb), to = max(dat1$T1_ppb), length.out =  20), Treatment.2 = c("CLO", "IMI", "MIX", "THX"))
-
-dum <- dummyVars(~ Treatment.2, data = newmods)
-
-NM <- cbind(newmods[,1],predict(dum, newmods))
-
-preds <- predict(res4, newmods = NM[,1:4])
-
-preds <- data.frame(pred = preds$pred, ci.lb = preds$ci.lb, ci.ub = preds$ci.ub, T1_ppb = newmods$T1_ppb, Treatment.2 = newmods$Treatment.2)
-
-model4 <- data.frame(model = "y ~ Concentration [ppb] + Neonic type", p_value = res4$QMp, R_squared = round(res4$R2/100,2), AICc = res4$fit.stats$ML[5])
-```
-
-```{r, message=FALSE, warning=FALSE, echo=FALSE, cache=FALSE, fig.cap= "effect size of the concentration and neonic type on the reporoduction Standardized mean difference of abundance"}
-
-ggplot(preds, aes(x = T1_ppb, y = pred))  + geom_ribbon(alpha = 0.5,aes(ymin = ci.lb, ymax = ci.ub, fill = Treatment.2)) + theme_classic() + geom_line(aes(lty = Treatment.2))+ xlab("Concentration (ppb)") + ylab("Standardized mean difference") + geom_hline(yintercept = 0, lty= 2) + scale_fill_grey(name = "Neonic Type") + geom_point(alpha = 0.8, data= dat1, aes(x = T1_ppb, y = yi, size = Study.T1..n., color = Treatment.2)) + scale_color_grey(name = "Neonic Type") + scale_linetype(name = "Neonic Type") + scale_size(name = "number of studies") + scale_x_continuous(labels = scales::comma)
-```
-
-### Comparison of models
+###Model Comparison reproduction with concentration [ppb]
 
 ```{r, echo= FALSE}
-All <- rbind(model1, model2, model3, model4)
+modelRepro <- dplyr::arrange(modelRepro, AICc)
 
-All <- dplyr::arrange(All, AICc)
+modelRepro$deltaAICc <- (modelRepro$AICc - min(modelRepro$AICc))
 
-All$deltaAICc <- (All$AICc - min(All$AICc))
+SUMDELTA <- sum(exp(-0.5*modelRepro$deltaAICc))
 
-SUMDELTA <- sum(exp(-0.5*All$deltaAICc))
+modelRepro$Weight <- exp(-0.5*modelRepro$deltaAICc)/SUMDELTA
 
-All$Weight <- exp(-0.5*All$deltaAICc)/SUMDELTA
+modelRepro <- dplyr::filter(modelRepro, deltaAICc < 2)
 
-knitr::kable(All, digits = 3, row.names = FALSE, caption = "Comparison of models taking into account p value, Pseudo R squared and AICc")
+knitr::kable(modelRepro, digits = 3, row.names = FALSE, caption = "Comparison of models taking into account p value, Pseudo R squared and AICc")
+
+write.csv(modelRepro, "model_repro.csv")
 ```
 
 
